test_scores/negative_dimers/features/P61289.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P61289.pkl.xz